--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
 .App {
-  background: white;
+  /* text-align: center; */
+}
+
+section {
+  padding: 90px 0;
+  background: lightgreen;
+  border: 1px solid green;
 }
